--- a/ui/assets/styles/blue-classic-theme.css
+++ b/ui/assets/styles/blue-classic-theme.css
@@ -2463,7 +2463,7 @@ button {
       background-color: #ffffff; }
       .datatable .datatable-header .datatable-options-button .datatable-options-link {
         margin-right: 0; }
-        .datatable .datatable-header .datatable-options-button .datatable-options-link:not(:hover):not(.datatable-options-link-opened) {
+        .datatable .datatable-header .datatable-options-button .datatable-options-link:not(:hover):not(:focus):not(.datatable-options-link-opened) {
           border-left-color: #dfe4e7; }
   .datatable .datatable-body {
     display: grid;
