--- a/ui/assets/styles/hc-dark.css
+++ b/ui/assets/styles/hc-dark.css
@@ -2403,7 +2403,7 @@ button {
       background-color: #000000; }
       .datatable .datatable-header .datatable-options-button .datatable-options-link {
         margin-right: 0; }
-        .datatable .datatable-header .datatable-options-button .datatable-options-link:not(:hover):not(.datatable-options-link-opened) {
+        .datatable .datatable-header .datatable-options-button .datatable-options-link:not(:hover):not(:focus):not(.datatable-options-link-opened) {
           border-left-color: #444444; }
   .datatable .datatable-body {
     display: grid;
